--- a/typeScript/ts_lang/main.html
+++ b/typeScript/ts_lang/main.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head><title>TypeScript Greeter</title></head>
+<head>
+    <title>TypeScript Greeter</title>
+</head>
 <body>
-<script src="main.js"></script>
+
+<script src="demo.js">
+
+</script>
+
 </body>
 </html>
