update: js demo

--- a/typeScript/ts_lang/main.html
+++ b/typeScript/ts_lang/main.html
@@ -5,8 +5,13 @@
 </head>
 <body>
 
-<script src="demo.js">
+<div>Hello</div>
+<div id="root">heeeeeeeelooo</div>
+<div class="nav">Goodbye</div>
+<div class="nav">Goodbye Goodbye</div>
+<button id="but">按钮</button>
 
+<script src="demo.js">
 </script>
 
 </body>
