update: ts demo

--- a/typeScript/ts_lang/main.html
+++ b/typeScript/ts_lang/main.html
@@ -12,7 +12,7 @@
 <div class="nav">Goodbye Goodbye</div>
 <button id="but">按钮</button>
 
-<script src="demo.js">
+<script src="es6_demo.js">
 </script>
 
 </body>
